deployment-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:  
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        # - name: conector-api
        #image: alexismorenov/conector-stp:1.0.5
        # ports:
        # - containerPort: 8085
      #- name: postgres
      #  image: postgres:13.1-alpine
      #  ports:
      #    - containerPort: 5432
      #  envFrom:
      #    - secretRef:
      #        name: postgres
      #  volumeMounts:
      #  - name: postgres-database-storage
      #    mountPath: /var/lib/pgsql/data
      - name: conector-api
        image: alexismorenov/conector-stp:1.1.0
        ports:
          - name: http
            containerPort: 8085
            protocol: TCP  
      #volumes:
      #- name: postgres-database-storage
      #  persistentVolumeClaim:
       #   claimName: postgres-volume
