deployment-update.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres  
    spec:
      containers:
        # - name: conector-api
        #image: alexismorenov/conector-stp:1.0.5
        # ports:
        # - containerPort: 8085
      - name: postgres
        image: postgres:13.1-alpine
        ports:
          - containerPort: 5432
        volumeMounts:
        - name: postgres-database-storage
          mountPath: /var/lib/pgsql/data
      - name: conector-api
        image: alexismorenov/conector-stp:1.0.5
        ports:
          - containerPort: 8085
      volumes:
      - name: postgres-database-storage
        persistentVolumeClaim:
          claimName: postgres-volume
