app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: app
  annotations:
    cloud.google.com/backend-config: '{"ports": {"8085":"app-config"}}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: app
  type: NodePort
  ports:
  #- protocol: TCP
  #  port: 5432
  #  targetPort: 5432
  #  name: postgres
  #- protocol: TCP
    - port: 8085
      targetPort: 8085
      protocol: TCP
      name: http
