postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
spec:
  selector:
    app: postgres
  type: NodePort    
  ports:
  - protocol: TCP
    port: 5432
    targetPort: 5432
    name: postgres
  - protocol: TCP
    port: 8085
    targetPort: 8085
    name: conector-stp
