app-ingress-solo.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress-solo
spec:
  defaultBackend:
    service:
      name: app
      port:
        number: 8085
